samples/_failures_safe/1761529321_00c2a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7676fa9f.c: In function ‘main’:
./samples/SAFE/__tmp_7676fa9f.c:135:9: error: ‘display_log’ undeclared (first use in this function)
  135 |         display_log
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_7676fa9f.c:135:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7676fa9f.c:135:20: error: expected ‘;’ at end of input
  135 |         display_log
      |                    ^
      |                    ;
./samples/SAFE/__tmp_7676fa9f.c:135:9: error: expected declaration or statement at end of input
  135 |         display_log
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_7676fa9f.c:135:9: error: expected declaration or statement at end of input
